// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#team.users should require admin for detailed info 1`] = `
Object {
  "data": Array [
    Object {
      "avatarUrl": "http://example.com/avatar.png",
      "id": "fa952cff-fa64-4d42-a6ea-6955c9689046",
      "name": "Admin User",
      "username": "admin",
    },
    Object {
      "avatarUrl": "http://example.com/avatar.png",
      "id": "46fde1d4-0050-428f-9f0b-0bf77f4bdf61",
      "name": "User 1",
      "username": "user1",
    },
  ],
  "ok": true,
  "pagination": Object {
    "limit": 15,
    "nextPath": "/api/team.users?limit=15&offset=15",
    "offset": 0,
  },
  "status": 200,
}
`;

exports[`#team.users should return teams paginated user list 1`] = `
Object {
  "data": Array [
    Object {
      "avatarUrl": "http://example.com/avatar.png",
      "email": "admin@example.com",
      "id": "fa952cff-fa64-4d42-a6ea-6955c9689046",
      "isAdmin": true,
      "isSuspended": false,
      "name": "Admin User",
      "username": "admin",
    },
    Object {
      "avatarUrl": "http://example.com/avatar.png",
      "email": "user1@example.com",
      "id": "46fde1d4-0050-428f-9f0b-0bf77f4bdf61",
      "isAdmin": false,
      "isSuspended": false,
      "name": "User 1",
      "username": "user1",
    },
  ],
  "ok": true,
  "pagination": Object {
    "limit": 15,
    "nextPath": "/api/team.users?limit=15&offset=15",
    "offset": 0,
  },
  "status": 200,
}
`;
